--- a/index.html
+++ b/index.html
@@ -609,28 +609,43 @@
 
     /* Tooltip (fixed size) */
     .tooltip{
-      position:absolute;
-      left:16px;
-      right:16px;
-      bottom:56px;
+  position:absolute;
+  left:16px;
+  right:16px;
+  bottom:14px;
 
-      min-height: 96px;
-      padding:14px 16px;
+  min-height: 110px;
+  padding:14px 16px;
 
-      border-radius: 14px;
-      background: rgba(255,255,255,.88);
-      border: 1px solid rgba(240,170,200,.35);
-      box-shadow: 0 18px 40px rgba(0,0,0,.08);
+  border-radius:14px;
+  background: rgba(255,255,255,.88);
+  border: 1px solid rgba(240,170,200,.35);
+  box-shadow: 0 18px 40px rgba(0,0,0,.08);
 
-      font-size: 13px;
-      color: rgba(50,20,35,.9);
+  font-size: 13px;
+  color: rgba(50,20,35,.9);
 
-      display:flex;
-      align-items:center;
-      gap:10px;
+  display:flex;
+  flex-direction: column;      /* 👈 stack vertically */
+  align-items: center;         /* 👈 center horizontally */
+  justify-content: flex-start;
+  gap:8px;
 
-      z-index:3;
-    }
+  text-align: center;
+  z-index:3;
+}
+
+/* Header text */
+.tooltip strong{
+  font-weight:900;
+  white-space: nowrap;
+}
+
+/* Message text */
+.tooltip .tip-text{
+  max-width: 100%;
+  line-height:1.4;
+}
     .tooltip strong{
   font-weight:900;
   white-space: nowrap;
