--- a/index.html
+++ b/index.html
@@ -381,12 +381,12 @@
       font-family: "Playfair Display", serif;
       font-size: 12.5px;
       line-height: 1.7;
-      color: rgba(90, 20, 55, .10);
+      color: rgba(90, 20, 55, .08);
       user-select:none;
     }
     .secrets .line{
       filter: blur(.35px);
-      text-shadow: 0 1px 0 rgba(255,255,255,.45);
+      text-shadow: 0 1px 0 rgba(255,255,255,.6);
       letter-spacing: .01em;
     }
 
@@ -851,7 +851,7 @@
                     <div class="line">Your perfect tits</div>
                     <div class="line">Your pretty little pussy</div>
                     <div class="line">Your fat ass</div>
-                    <div class="line">How you'll do anything to pleas me</div>
+                    <div class="line">How you'll do anything to please me</div>
                   </div>
                 </div>
               </div>
