--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
                       <p>Use your finger or mouse. Scratch enough and it shows through.</p>
 
                       <div class="scratch-area" id="scratchArea">
-                        <div class="scratch-under">You make my days softer.</div>
+                        <div class="scratch-under">You make me truly happy, Lexie.</div>
                         <canvas id="scratchCanvas"></canvas>
                       </div>
 
