No secrets index.html

--- a/index.html
+++ b/index.html
@@ -376,6 +376,9 @@
 
     /* Barely-visible secrets */
     .secrets{
+      display: none;
+    }
+    .secrets{
       margin-top: 18px;
       padding-bottom: 8px;
       font-family: "Playfair Display", serif;
