--- a/index.html
+++ b/index.html
@@ -769,134 +769,109 @@
       .vibe-card{ min-height: 112px; }
     }
 
-    /* ===== Heartbeat Page (theme-matching) ===== */
-/* Uses your site’s existing fonts/colors by default (inherits from your card/page styles). */
+    /* =========================================================
+   HEARTBEAT PAGE — FINAL THEME-MATCHED VERSION
+   ========================================================= */
 
 .heartbeat-page{
-  /* don’t force a new layout style — let your page/card styles lead */
-  padding: clamp(18px, 3vw, 28px);
+  padding: clamp(22px, 4vh, 48px);
 }
 
 .hb-wrap{
-  width: 100%;
   max-width: 520px;
   margin: 0 auto;
   text-align: center;
+  padding-top: clamp(32px, 6vh, 80px); /* centers heart lower */
 }
 
-/* Match your headings (Playfair / whatever your other pages use) */
+/* Title matches your card typography */
 .hb-title{
-  margin: 0 0 14px;
-  font-family: inherit;            /* inherits your page heading font */
+  font-family: inherit;
   font-weight: 600;
-  letter-spacing: 0.2px;
-  font-size: clamp(22px, 2.6vw, 28px);
+  font-size: clamp(22px, 2.5vw, 28px);
+  margin-bottom: 14px;
   opacity: 0.95;
 }
 
-/* Heart container styled like your card elements (soft, clean, not neon) */
+/* ===== Heart container ===== */
 .hb-heart{
   position: relative;
-  width: 132px;
-  height: 132px;
-  margin: 14px auto 10px;
+  width: 150px;
+  height: 150px;
+  margin: 24px auto 14px;
   cursor: pointer;
   touch-action: none;
-  transform: translateZ(0);
-
-  /* Use your global shadow/rounding look */
-  border-radius: 999px;
   animation: hbPulse var(--hbDur, 0.85s) ease-in-out infinite;
 }
 
-/* Subtle press feel, similar to buttons */
-.hb-heart:active{
-  transform: scale(0.985);
-}
-
-/* Heart shape: softened + uses theme-ish accent instead of a loud gradient */
-.hb-heart-shape{
-  position:absolute;
-  inset: 18px;
-  transform: rotate(-45deg);
-
-  /* theme-friendly fill (falls back nicely even if vars don’t exist) */
-  background:
-    radial-gradient(circle at 30% 30%, rgba(255,255,255,0.55), rgba(255,255,255,0) 46%),
-    linear-gradient(135deg,
-      var(--accent, #ff4d7d),
-      var(--accent2, #ff2f6d)
-    );
-
-  border-radius: 18px;
-
-  /* match your overall soft shadow vibe */
-  box-shadow: 0 14px 34px rgba(0,0,0,0.12);
-}
-
-.hb-heart-shape::before,
-.hb-heart-shape::after{
-  content:"";
-  position:absolute;
+/* ===== SVG Heart ===== */
+.hb-heart-svg{
   width: 100%;
   height: 100%;
-  background: inherit;
-  border-radius: 999px;
+  display: block;
+  color: var(--pink); /* uses your existing theme color */
+  filter:
+    drop-shadow(0 16px 30px rgba(0,0,0,0.18))
+    drop-shadow(0 6px 12px rgba(255, 105, 180, 0.25));
 }
-.hb-heart-shape::before{ top: -50%; left: 0; }
-.hb-heart-shape::after{ left: 50%; top: 0; }
 
-/* Glow: subtle + tied to accent */
+.hb-heart-svg path{
+  fill: currentColor;
+  stroke: rgba(255,255,255,0.4);
+  stroke-width: 0.6;
+}
+
+/* ===== Soft glow ===== */
 .hb-glow{
-  position:absolute;
-  inset:-8px;
+  position: absolute;
+  inset: -14px;
   border-radius: 999px;
-  filter: blur(14px);
-  opacity: 0.25;
-  background: radial-gradient(circle,
-    rgba(255, 77, 125, 0.55),
-    rgba(255, 77, 125, 0) 70%
+  background: radial-gradient(
+    circle,
+    rgba(255, 105, 180, 0.45),
+    rgba(255, 105, 180, 0) 70%
   );
+  filter: blur(18px);
+  opacity: 0.22;
   animation: hbGlow var(--hbDur, 0.85s) ease-in-out infinite;
-  pointer-events:none;
+  pointer-events: none;
 }
 
-/* Instruction text: match your muted body text style */
+/* ===== Instruction ===== */
 .hb-instruction{
-  margin: 8px 0 0;
-  font-family: inherit;
   font-size: 13px;
-  opacity: 0.70;
+  opacity: 0.7;
+  margin-top: 6px;
 }
 
-/* Message: match your page body tone */
+/* ===== Message (delayed reveal) ===== */
 .hb-message{
-  margin: 16px auto 0;
-  max-width: 430px;
-  font-family: inherit;
+  max-width: 420px;
+  margin: 18px auto 0;
   font-size: clamp(16px, 2vw, 20px);
   line-height: 1.35;
-
   opacity: 0;
   transform: translateY(8px);
   transition: opacity 600ms ease, transform 600ms ease;
 }
+
 .hb-message.is-visible{
   opacity: 1;
   transform: translateY(0);
 }
 
-/* Animations stay the same */
+/* ===== Animations ===== */
 @keyframes hbPulse{
   0%   { transform: scale(1); }
-  18%  { transform: scale(1.06); }
-  35%  { transform: scale(0.988); }
-  55%  { transform: scale(1.045); }
+  18%  { transform: scale(1.05); }
+  35%  { transform: scale(0.99); }
+  55%  { transform: scale(1.04); }
   100% { transform: scale(1); }
 }
+
 @keyframes hbGlow{
   0%   { transform: scale(0.96); opacity: 0.18; }
-  25%  { transform: scale(1.08); opacity: 0.30; }
+  25%  { transform: scale(1.08); opacity: 0.32; }
   100% { transform: scale(0.96); opacity: 0.18; }
 }
   </style>
@@ -1108,10 +1083,12 @@
   <div class="hb-wrap">
     <h2 class="hb-title">My Heart When You’re Here</h2>
 
-    <div class="hb-heart" id="hbHeart" aria-label="Heartbeat">
-      <span class="hb-heart-shape"></span>
-      <span class="hb-glow"></span>
-    </div>
+   <div class="hb-heart" id="hbHeart" aria-label="Heartbeat">
+  <svg class="hb-heart-svg" viewBox="0 0 24 24" aria-hidden="true">
+    <path d="M12 21s-7.2-4.7-9.7-8.6C.5 9.5 2 6.4 5.1 5.6c1.7-.4 3.5.2 4.6 1.6.4.5.7 1.1.9 1.7.2-.6.5-1.2.9-1.7 1.1-1.4 2.9-2 4.6-1.6 3.1.8 4.6 3.9 2.8 6.8C19.2 16.3 12 21 12 21z"/>
+  </svg>
+  <span class="hb-glow"></span>
+</div>
 
     <p class="hb-instruction">Touch and hold the heart.</p>
 
@@ -1751,18 +1728,31 @@ yesBtn.addEventListener('click', ()=>{
     rafId = requestAnimationFrame(tick);
   };
 
-  const hold = () => {
-    holding = true;
-    targetBpm = 124;
-    showMsg();
-    start();
-  };
+  let msgTimer = null;
 
-  const release = () => {
-    holding = false;
-    targetBpm = 72;
-    start();
-  };
+const hold = () => {
+  holding = true;
+  targetBpm = 124;
+
+  if (msgTimer) clearTimeout(msgTimer);
+  msgTimer = setTimeout(() => {
+    if (holding) showMsg();
+  }, 1000);
+
+  start();
+};
+
+const release = () => {
+  holding = false;
+  targetBpm = 72;
+
+  if (msgTimer) {
+    clearTimeout(msgTimer);
+    msgTimer = null;
+  }
+
+  start();
+};
 
   heart.addEventListener("pointerdown", (e) => {
     e.preventDefault();
